fixed flicker on eval rendering

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,7 +51,7 @@
   }
 
   .Home,
-  .Form {
+  .Evaluation {
     width: 900px;
     justify-content: center;
     gap: 50px;
